log
Wed 19 Apr 2023 09:58:26 PM UTC: 
 tests:  1|8
total_score: 0/70
ea55fce
Wed 19 Apr 2023 09:59:59 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
fbcfd92
Wed 19 Apr 2023 10:33:02 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
c0c62fb
Wed 19 Apr 2023 10:33:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
dbf82c0
Wed 19 Apr 2023 10:33:27 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|7
total_score: 5/70
8ccfac2
Wed 19 Apr 2023 10:33:50 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
c8e922c
Wed 19 Apr 2023 10:33:57 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
f30f99e
Thu 20 Apr 2023 12:42:22 AM UTC: 
 treemap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:88:29: error: ‘map’ undeclared (first use in this function)
   88 |         int resultadoComp = map->lower_than(current->pair->key,key);
      |                             ^~~
treemap.c:88:29: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e1f1197
Thu 20 Apr 2023 12:42:30 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
d74919a
Thu 20 Apr 2023 12:43:26 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
2b917f1
Thu 20 Apr 2023 12:43:43 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
b0c455a
Thu 20 Apr 2023 12:44:10 AM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
f2dfc69
Thu 20 Apr 2023 12:59:14 AM UTC: 
 treemap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:58:61: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   58 |         if (is_equal(tree,current->pair->key,key)==1)return NULL;//tengo que actualizar el current??
      |                                                             ^~~~
treemap.c:53:6: note: declared here
   53 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:66:9: error: ‘resultadoComp’ undeclared (first use in this function)
   66 |     if (resultadoComp==1) parent->right=nuevo;
      |         ^~~~~~~~~~~~~
treemap.c:66:9: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
9e7487a
Thu 20 Apr 2023 12:59:27 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:58:61: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   58 |         if (is_equal(tree,current->pair->key,key)==1)return NULL;
      |                                                             ^~~~
treemap.c:53:6: note: declared here
   53 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:67:9: error: ‘resultadoComp’ undeclared (first use in this function)
   67 |     if (resultadoComp==1) parent->right=nuevo;
      |         ^~~~~~~~~~~~~
treemap.c:67:9: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
Compilation failed
8ae4577
Thu 20 Apr 2023 12:59:42 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:67:9: error: ‘resultadoComp’ undeclared (first use in this function)
   67 |     if (resultadoComp==1) parent->right=nuevo;
      |         ^~~~~~~~~~~~~
treemap.c:67:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
457842d
Thu 20 Apr 2023 01:00:59 AM UTC: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:20: error: ‘nuevo’ undeclared (first use in this function)
   57 |         tree->root=nuevo;
      |                    ^~~~~
treemap.c:57:20: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:75:9: error: ‘resultadoComp’ undeclared (first use in this function)
   75 |     if (resultadoComp==1) parent->right=nuevo;
      |         ^~~~~~~~~~~~~
Compilation failed
116117a
Thu 20 Apr 2023 01:01:13 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:76:9: error: ‘resultadoComp’ undeclared (first use in this function)
   76 |     if (resultadoComp==1) parent->right=nuevo;
      |         ^~~~~~~~~~~~~
treemap.c:76:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
dda5dac
Thu 20 Apr 2023 01:02:33 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
db2c225
Thu 20 Apr 2023 01:05:05 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/70
4d6fda6
Thu 20 Apr 2023 01:16:48 AM UTC: 
 treemap.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:93:1: error: control reaches end of non-void function [-Werror=return-type]
   93 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e2dec23
Thu 20 Apr 2023 01:17:11 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:93:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   93 |     return;
      |     ^~~~~~
treemap.c:85:12: note: declared here
   85 | TreeNode * minimum(TreeNode * x){
      |            ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1575eb5
Thu 20 Apr 2023 01:17:34 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:93:1: error: control reaches end of non-void function [-Werror=return-type]
   93 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6a78db1
Thu 20 Apr 2023 01:18:54 AM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:100:1: error: control reaches end of non-void function [-Werror=return-type]
  100 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7d3ba04
Thu 20 Apr 2023 01:19:13 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:100:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
  100 |     return;
      |     ^~~~~~
treemap.c:92:12: note: declared here
   92 | TreeNode * minimum(TreeNode * x){
      |            ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bf39806
Thu 20 Apr 2023 01:19:24 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
1234dd0
Thu 20 Apr 2023 01:21:04 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
f989fa4
